# Airport-Flight-Announcement-System

./: .gitignore  0.30.0  README.md  airport_announcer.spec  error_log.txt  hook-eventlet.py  main.py  main.spec  pyproject.toml  requirements.txt  runtime.bat
data/: data.xlsx
release/: runtime.bat
release-v2025.11.12/src/airport_flight_announcement_system/: main.py
release-v2025.11.12/src/airport_flight_announcement_system/data/: data.xlsx
release-v2025.11.12/src/airport_flight_announcement_system/data_copy/: city_data.xlsx  data.xlsx
release/src/airport_flight_announcement_system/: main.py
release/src/airport_flight_announcement_system/static/css/: style.css
src/airport_flight_announcement_system/: README.md  main - 副本.py  main.py  main.spec  软件说明书及版权说明.txt
src/airport_flight_announcement_system/templates/: index.html
