[project]
name = "airport-flight-announcement-system"
version = "0.1.0"
description = ""
authors = [
    {name = "WU HANQING",email = "wuhanqing2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

# --- FINAL, STABLE SET FOR THREADING MODE ---
dependencies = [
    "flask==2.3.2",
    "flask-socketio==5.3.6",
    "python-socketio==5.10.0",
    "python-engineio==4.8.0",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "airport_flight_announcement_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]